[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["dattatraya.walake <dattatraya.walake@databricks.com>"]
readme = "README.md"

[tool.poetry.scripts]
example = "example.main:main"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
